2010-08-22  Marc Mutz  <marc.mutz@kdab.com>

        Reviewed by Antonio Gomes.

        [Qt] Actually emit the QWebView::selectionChanged() signal

        https://bugs.webkit.org/show_bug.cgi?id=44252

        * Api/qwebview.cpp:
        (QWebView::setPage): Connect QWebPage::selectionChanged() to QWebView::selectionChanged()

2010-08-20  Ademar de Souza Reis Jr  <ademar.reis@openbossa.org>

        Reviewed by Ariya Hidayat.

        [Qt] constify core() and kit() parameters
        https://bugs.webkit.org/show_bug.cgi?id=44347

        * Api/qwebframe.cpp:
        (QWebFrame::evaluateJavaScript):
        * Api/qwebframe_p.h:
        * Api/qwebhistory.cpp:
        (QWebHistoryItemPrivate::core):
        * Api/qwebhistory_p.h:
        * Api/qwebpage.cpp:
        (QWebPagePrivate::core):
        * Api/qwebpage_p.h:

2010-08-19  Balazs Kelemen  <kb@inf.u-szeged.hu>

        Reviewed by Antonio Gomes.

        [Qt] Fix cursor change propagation
        https://bugs.webkit.org/show_bug.cgi?id=44250

        * WebCoreSupport/ChromeClientQt.cpp:
        (WebCore::ChromeClientQt::setCursor): Implemented. Propagete the callback forward to the PageClient.

2010-08-19  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX #3: <http://webkit.org/b/44285> Fix compilation with NETSCAPE_PLUGIN_API disabled

        Still trying to make Qt Linux Release minimal buildbot happy.

        * WebCoreSupport/FrameLoaderClientQt.cpp:
        (WebCore::FrameLoaderClientQt::createPlugin): Wrap code that
        handles Netscape plugins in #if ENABLE(NETSCAPE_PLUGIN_API)
        and #endif.

2010-08-19  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX: FrameLoaderClientQt.h should include ResourceError.h

        * WebCoreSupport/FrameLoaderClientQt.h: Include ResourceError.h.

2010-08-19  Girish Ramakrishnan  <girish@forwardbias.in>

        Reviewed by Kenneth Christiansen.

        [Qt] Inject wmode=opaque for both QWebView and QGraphicsWebView on Maemo5